--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "atcv2",
+  "name": "atcv",
   "version": "1.0.0",
-  "main": "main/index.js",
+  "main": "src/main/index.js",
   "scripts": {
     "build": "react-scripts build",
     "start": "react-scripts start"
@@ -14,8 +14,8 @@
     "bulma": "^0.9.2",
     "firebase": "^8.2.4",
     "firebaseui": "^4.7.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-firebaseui": "^4.1.0",
     "react-reorder": "^3.0.0-alpha.7",
     "react-share": "^4.3.1"
