--- a/netlify.toml
+++ b/netlify.toml
@@ -3,9 +3,11 @@
   to = "https://kenkoooo.com/atcoder/resources/problems.json"
   status = 200
   force = true
+  headers = {X-From = "Netlify"}
 
 [[redirects]]
   from = "https://atcoderreminder.netlify.app/"
   to = "https://kenkoooo.com/atcoder/resources/problem-models.json"
   status = 200
   force = true
+  headers = {X-From = "Netlify"}
