--- a/netlify.toml
+++ b/netlify.toml
@@ -1,1 +1,5 @@
-https://atcoderreminder.netlify.app/ https://kenkoooo.com/atcoder/resources/:splat  200
+[[redirects]]
+from = "https://atcoderreminder.netlify.app/"
+to = "https://kenkoooo.com/atcoder/resources/:splat"
+status = 200
+force = false
