--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-from = "https://atcoderreminder.netlify.app/"
-to = "https://kenkoooo.com/atcoder/resources/:splat"
+from = "https://atcoderreminder.netlify.app"
+to = "https://kenkoooo.com/atcoder/resources/problems.json"
 status = 200
 force = false
