--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "src/main/index.js",
   "scripts": {
-    "build": "react-scripts build",
-    "start": "react-scripts start"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
@@ -12,18 +14,23 @@
   "description": "",
   "dependencies": {
     "bulma": "^0.9.2",
-    "firebase": "^8.2.4",
-    "firebaseui": "^4.7.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-firebaseui": "^4.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-reorder": "^3.0.0-alpha.7",
-    "react-share": "^4.3.1"
+    "react-share": "^5.0.3"
   },
   "devDependencies": {
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "vite": "^5.0.8"
   },
   "browserslist": {
     "production": [
