--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "atcv",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "src/main/index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier . --write",
     "preview": "vite preview"
   },
   "keywords": [],
@@ -20,9 +21,6 @@
     "react-share": "^5.0.3"
   },
   "devDependencies": {
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
@@ -30,6 +28,10 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier": "3.1.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "vite": "^5.0.8"
   },
   "browserslist": {
