--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
+    "test": "vitest",
     "format": "prettier . --write",
     "preview": "vite preview"
   },
@@ -35,7 +36,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vitest": "^1.1.3"
   },
   "browserslist": {
     "production": [
