--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "bulma": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-reorder": "^3.0.0-alpha.7",
-    "react-share": "^5.0.3",
-    "zod": "^3.22.4"
+    "react-share": "^5.0.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
