--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bulma": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-share": "^5.0.3"
   },
   "devDependencies": {
