--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "description": "",
   "dependencies": {
     "bulma": "^1.0.0",
+    "bulma-toast": "^2.4.4",
     "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
